changed background image props to hopefully fix mobile version not showing it and moved some css that was unneccesarily in js back into css

--- a/styles/main.css
+++ b/styles/main.css
@@ -5,6 +5,7 @@ body{
     background-color:rgb(1, 95, 95);
     background-image:url("https://ericdsergio.webhop.me/assets/woodSculpture.png");
     background-repeat:no-repeat;
+    background-size:calc(100vh);
     /*background-size:cover;*/
     background-attachment: fixed;
 }
@@ -311,7 +312,21 @@ ul {
     cursor: pointer;;
 }
 
+#reclaimFrame {
+    position:absolute;
+    top:0px;
+    left:0px;
+    width:100%;
+    height:100%;
+}
 
+#reclaimFrameExit {
+    position:relative;
+    top:5%;
+    left:97%;
+    font-size:1.3em;
+    color:red;
+}
 
 /*xxxxxxxxxxxxx------------------------------------------------------End Projects page styling*/
 
